# sc-variant-annotation-pipeline

./: .dockerignore  .gitignore  README.md  main.nf  nextflow.config  pyproject.toml  python_runner.py  report.html  requirements.txt
conf/: base.config  docker.config
docker/: Dockerfile  docker-compose.yml
modules/local/: filtering.nf  qc_reporting.nf  quality_control.nf  variant_calling.nf
results_verify/pipeline_info/: execution_report.html  execution_timeline.html  execution_trace.txt
subworkflows/: preprocessing.nf
tests/data/: test_samples.csv
