[project]
name = "sc-variant-annotation"
version = "1.0.0"
description = "Single-cell variant annotation pipeline utilities"
authors = [
{name = "STALIN DANY SHAJI", email = "stalindanyshaji@gmail.com.com"}
]
dependencies = [
"pandas>=1.5.0",
"numpy>=1.23.0",
"pysam>=0.21.0",
"pyvcf>=0.6.8",
"click>=8.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["bin"]
include = ["utils/*"]
