[project]
name = "sc-variant-annotation"
version = "1.0.0"
description = "Single-cell variant annotation pipeline utilities"
authors = [
{name = "STALIN DANY SHAJI", email = "stalindanyshaji@gmail.com.com"}
]
dependencies = [
"pandas>=1.5.0",
"numpy>=1.23.0",
"pysam>=0.21.0",
"pyvcf>=0.6.8",
"click>=8.1.0",
"biopython>=1.81",
"matplotlib>=3.7.0",
"seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bin*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
ignore_missing_imports = true
